--- a/app/app/src/main/res/layout/routers.xml
+++ b/app/app/src/main/res/layout/routers.xml
@@ -3,16 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_marginBottom="56dp">
 
     <TextView
         android:id="@+id/text_routers"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="353dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="352dp"
+        android:gravity="center"
         android:textAlignment="center"
         android:textSize="20sp"
         android:text="@string/title_routers"
