--- a/app/src/main/res/layout/homescreen.xml
+++ b/app/src/main/res/layout/homescreen.xml
@@ -8,9 +8,9 @@
     tools:context=".ui.firstscreen.FirstScreenFragment">
 
     <fragment
+        class="com.google.android.gms.maps.SupportMapFragment"
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        class="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,6 +33,8 @@
             android:id="@+id/additional_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:layout_marginTop="@dimen/activity_horizontal_margin"
             android:orientation="vertical">
 
             <TextView
@@ -98,7 +100,6 @@
         </LinearLayout>
     </ScrollView>
 
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/refresh_data"
         android:layout_width="56dp"
@@ -110,7 +111,6 @@
         android:clickable="true"
         android:foregroundGravity="top"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/nav_view"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
